{
  "version": 4,
  "terraform_version": "1.15.7",
  "serial": 78,
  "lineage": "9eb0e0d4-ecfd-112f-4696-d0d04858ede4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057895726658a5ca7",
            "arn": "arn:aws:ec2:us-east-1:878617118606:elastic-ip/eipalloc-057895726658a5ca7",
            "domain": "vpc",
            "id": "eipalloc-057895726658a5ca7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-211-99-28.compute-1.amazonaws.com",
            "public_ip": "44.211.99.28",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-eip-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-eip-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5b9e912c0bc012f",
            "arn": "arn:aws:ec2:us-east-1:878617118606:elastic-ip/eipalloc-0f5b9e912c0bc012f",
            "domain": "vpc",
            "id": "eipalloc-0f5b9e912c0bc012f",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-6-79-74.compute-1.amazonaws.com",
            "public_ip": "52.6.79.74",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-eip-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-eip-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:internet-gateway/igw-0dd3eebd20cd693a7",
            "id": "igw-0dd3eebd20cd693a7",
            "owner_id": "878617118606",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-igw",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-igw",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:loadbalancer/app/petclinic-prod-alb/f84ea12f45e74aff",
            "arn_suffix": "app/petclinic-prod-alb/f84ea12f45e74aff",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "petclinic-prod-alb-284502967.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:878617118606:loadbalancer/app/petclinic-prod-alb/f84ea12f45e74aff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "petclinic-prod-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-07221dde84d48e04b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0739da1729cbc8b06"
              },
              {
                "subnet_id": "subnet-0abd36759ae70c5d4"
              }
            ],
            "subnets": [
              "subnet-0739da1729cbc8b06",
              "subnet-0abd36759ae70c5d4"
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-alb",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-alb",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:listener/app/petclinic-prod-alb/f84ea12f45e74aff/b6b36da4c37a3014",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878617118606:listener/app/petclinic-prod-alb/f84ea12f45e74aff/b6b36da4c37a3014",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:loadbalancer/app/petclinic-prod-alb/f84ea12f45e74aff",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:listener/app/petclinic-prod-alb/f84ea12f45e74aff/b6234f2dde13b0db",
            "certificate_arn": "arn:aws:acm:us-east-1:878617118606:certificate/c8256c71-4a92-41d0-bbdb-9aba3bedb197",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:targetgroup/petclinic-prod-tg/ec9f14dca1b92d05",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878617118606:listener/app/petclinic-prod-alb/f84ea12f45e74aff/b6234f2dde13b0db",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:loadbalancer/app/petclinic-prod-alb/f84ea12f45e74aff",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_acm_certificate.cert",
            "aws_lb.main",
            "aws_lb_target_group.app",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "tls_private_key.main",
            "tls_self_signed_cert.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:878617118606:targetgroup/petclinic-prod-tg/ec9f14dca1b92d05",
            "arn_suffix": "targetgroup/petclinic-prod-tg/ec9f14dca1b92d05",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/actuator/health",
                "port": "8080",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:878617118606:targetgroup/petclinic-prod-tg/ec9f14dca1b92d05",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "petclinic-prod-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-tg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-tg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-057895726658a5ca7",
            "association_id": "eipassoc-045bd79d72249821e",
            "connectivity_type": "public",
            "id": "nat-0506416754b7bee08",
            "network_interface_id": "eni-01e7557a437fc2014",
            "private_ip": "10.0.0.119",
            "public_ip": "44.211.99.28",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0abd36759ae70c5d4",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-gw-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-gw-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f5b9e912c0bc012f",
            "association_id": "eipassoc-091dd877c3957f533",
            "connectivity_type": "public",
            "id": "nat-0b638ab6e3ab1c916",
            "network_interface_id": "eni-01333a7a0b17722ee",
            "private_ip": "10.0.1.11",
            "public_ip": "52.6.79.74",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0739da1729cbc8b06",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-gw-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-nat-gw-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:route-table/rtb-0885b85772bc3bd1f",
            "id": "rtb-0885b85772bc3bd1f",
            "owner_id": "878617118606",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0506416754b7bee08",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-rt-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-rt-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:route-table/rtb-050267c81e895be93",
            "id": "rtb-050267c81e895be93",
            "owner_id": "878617118606",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b638ab6e3ab1c916",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-rt-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-rt-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:route-table/rtb-0983229ab836242ca",
            "id": "rtb-0983229ab836242ca",
            "owner_id": "878617118606",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0dd3eebd20cd693a7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-public-rt",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-public-rt",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-090bd4cad87aa4180",
            "route_table_id": "rtb-0885b85772bc3bd1f",
            "subnet_id": "subnet-0e1dfd5a53fbc0efc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af4a0f155f168bb1",
            "route_table_id": "rtb-050267c81e895be93",
            "subnet_id": "subnet-0c2de34d6129db827"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_app",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-014baac3d8bf71b86",
            "route_table_id": "rtb-0885b85772bc3bd1f",
            "subnet_id": "subnet-0f25187a27cc44d44"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b85ff7aab11a0d2b",
            "route_table_id": "rtb-050267c81e895be93",
            "subnet_id": "subnet-0c8ed036c300d2427"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private_db",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e55c1aebc92bd938",
            "route_table_id": "rtb-0983229ab836242ca",
            "subnet_id": "subnet-0abd36759ae70c5d4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02415682379d011be",
            "route_table_id": "rtb-0983229ab836242ca",
            "subnet_id": "subnet-0739da1729cbc8b06"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:security-group/sg-07221dde84d48e04b",
            "description": "Security group for ALB allowing HTTP and HTTPS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07221dde84d48e04b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "petclinic-prod-alb-sg",
            "name_prefix": "",
            "owner_id": "878617118606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-alb-sg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-alb-sg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:security-group/sg-05fd2d450bb032b7b",
            "description": "Security group for App EC2 instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05fd2d450bb032b7b",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow port 8080 from ALB",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07221dde84d48e04b"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "petclinic-prod-app-sg",
            "name_prefix": "",
            "owner_id": "878617118606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-app-sg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-app-sg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:security-group/sg-06a52e50212556608",
            "description": "Security group for RDS MySQL",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06a52e50212556608",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL traffic directly from EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05fd2d450bb032b7b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "petclinic-prod-rds-db-sg",
            "name_prefix": "",
            "owner_id": "878617118606",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-rds-db-sg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-rds-db-sg",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "timeouts": null,
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.app",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:subnet/subnet-0e1dfd5a53fbc0efc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1dfd5a53fbc0efc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878617118606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-app-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-app-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:subnet/subnet-0c2de34d6129db827",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c2de34d6129db827",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878617118606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-app-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-app-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:subnet/subnet-0f25187a27cc44d44",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f25187a27cc44d44",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878617118606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-db-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-db-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:subnet/subnet-0c8ed036c300d2427",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8ed036c300d2427",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "878617118606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-db-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-private-db-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:subnet/subnet-0abd36759ae70c5d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0abd36759ae70c5d4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878617118606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-public-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-public-us-east-1a",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:subnet/subnet-0739da1729cbc8b06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0739da1729cbc8b06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "878617118606",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-public-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-public-us-east-1b",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:vpc/vpc-027f5ce8327c52554",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0a7eef622d5576f8e",
            "default_route_table_id": "rtb-0a3058c2c7ea354a3",
            "default_security_group_id": "sg-026bcd495b13a764b",
            "dhcp_options_id": "dopt-036ae36ebe171eb79",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-027f5ce8327c52554",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a3058c2c7ea354a3",
            "owner_id": "878617118606",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-vpc",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-vpc",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:878617118606:vpc-endpoint/vpce-0887a14a5bf790d38",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0887a14a5bf790d38",
            "ip_address_type": "ipv4",
            "owner_id": "878617118606",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-050267c81e895be93",
              "rtb-0885b85772bc3bd1f",
              "rtb-0983229ab836242ca"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-s3-vpce",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "tags_all": {
              "Environment": "prod",
              "ManagedBy": "Terraform",
              "Name": "petclinic-prod-s3-vpce",
              "Owner": "Binome-ISI",
              "Project": "petclinic"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-027f5ce8327c52554"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}